Updated README, set `preferGlobal`
README.md updated with instructions for install from npm.
`package.json` updated to have `preferGlobal` flag to warn
user when package is installed locally.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "update": "make all",
     "postuninstall": "make uninstall"
   },
+  "preferGlobal": true,
   "repository": {
     "type": "git",
     "url": "git@github.com:TylerBrock/mongo-hacker.git"
