--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mongo-hacker",
-  "version": "0.0.16",
+  "version": "0.1.0-dev",
   "description": "MongoDB Shell Enhancements for Hackers",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
